G1GC 튜닝 추가